--- a/admin.html
+++ b/admin.html
@@ -70,6 +70,10 @@ button{
 
 <h1>Painel Administrativo</h1>
 
+  <button onclick="logout()" style="margin-bottom:16px">
+  Sair
+</button>
+
 <div id="lista"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
@@ -133,6 +137,11 @@ async function carregarUsuarios(){
 
     lista.appendChild(div);
   });
+}
+
+  function logout(){
+  localStorage.removeItem("adminLogado");
+  window.location.href = "admin-login.html";
 }
 
 async function alterarStatus(id,ativo){
