--- a/cadastro.html
+++ b/cadastro.html
@@ -6,111 +6,125 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="stylesheet" href="./theme/theme.css">
-<link rel="stylesheet" href="./theme/layout.css">
-<link rel="stylesheet" href="./theme/components.css">
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<style>
+body{
+  background:#f4f4f4;
+  font-family:Inter, Arial, sans-serif;
+  padding:16px;
+}
+
+.card{
+  background:#fff;
+  padding:20px;
+  border-radius:18px;
+  box-shadow:0 6px 20px rgba(0,0,0,.08);
+  max-width:420px;
+  margin:auto;
+}
+
+h1{
+  text-align:center;
+  margin-bottom:16px;
+}
+
+select,input{
+  width:100%;
+  padding:12px;
+  border-radius:12px;
+  border:1px solid #ccc;
+  margin-bottom:12px;
+}
+
+button{
+  width:100%;
+  padding:14px;
+  border:none;
+  border-radius:14px;
+  font-weight:700;
+  background:#d4af37;
+  color:#000;
+}
+</style>
 </head>
 
 <body>
 
-<div class="container">
-
+<div class="card">
   <h1>Cadastro</h1>
-  <div class="sub">Escolha como deseja se cadastrar</div>
 
-  <label>Tipo de cadastro</label>
-  <select id="tipo" onchange="ajustarFormulario()">
-    <option value="">Selecione</option>
+  <select id="tipo" onchange="toggleMotorista()">
+    <option value="">Quem é você?</option>
     <option value="passageiro">Passageiro</option>
     <option value="motorista">Motorista</option>
   </select>
 
-  <label>Nome completo</label>
-  <input type="text" id="nome">
+  <input type="text" id="nome" placeholder="Nome completo">
+  <input type="tel" id="telefone" placeholder="Telefone">
 
-  <label>Telefone</label>
-  <input type="tel" id="telefone">
-
-  <div id="dados-motorista" style="display:none">
-    <label>Placa do carro</label>
-    <input type="text" id="placa">
-
-    <label>Modelo do carro</label>
-    <input type="text" id="modelo">
+  <div id="cpfBox" style="display:none">
+    <input type="text" id="cpf" placeholder="CPF do motorista">
   </div>
 
-  <button onclick="cadastrar()">Cadastrar</button>
-
+  <button onclick="cadastrar()">Continuar</button>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
-const SUPABASE_URL = "https://msnqiiwcityikslikbow.supabase.co";
-const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1zbnFpaXdjaXR5aWtzbGlrYm93Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc3MDM5OTgsImV4cCI6MjA4MzI3OTk5OH0.0KyaSuL5At4_Cfa4TOM7kvvkVYv-gmR2sb7vX6VHkaU";
-
 const supabaseClient = supabase.createClient(
-  SUPABASE_URL,
-  SUPABASE_ANON_KEY
+  "SUA_URL",
+  "SUA_CHAVE"
 );
 
-function ajustarFormulario(){
+function toggleMotorista(){
   const tipo = document.getElementById("tipo").value;
-  document.getElementById("dados-motorista").style.display =
+  document.getElementById("cpfBox").style.display =
     tipo === "motorista" ? "block" : "none";
 }
 
 async function cadastrar(){
-
   const tipo = document.getElementById("tipo").value;
   const nome = document.getElementById("nome").value.trim();
   const telefone = document.getElementById("telefone").value.trim();
+  const cpf = document.getElementById("cpf").value.trim();
 
   if(!tipo || !nome || !telefone){
-    alert("Preencha todos os campos.");
+    alert("Preencha todos os campos");
     return;
   }
 
-  const telefoneLimpo = telefone.replace(/\D/g,"");
-  const email = telefoneLimpo + "@rfdriver.com"; // ✅ DOMÍNIO VÁLIDO
-  const senha = telefoneLimpo.slice(-6);
+  if(tipo === "motorista"){
+    if(!cpf){
+      alert("CPF obrigatório para motorista");
+      return;
+    }
 
-  // 1️⃣ CRIA LOGIN
-  const { data: authData, error: authError } =
-    await supabaseClient.auth.signUp({
-      email,
-      password: senha
-    });
+    const { data } = await supabaseClient
+      .from("motoristas_autorizados")
+      .select("*")
+      .eq("cpf", cpf)
+      .eq("ativo", true)
+      .single();
 
-  if(authError){
-    alert("Erro ao criar login: " + authError.message);
-    return;
+    if(!data){
+      alert("Motorista não autorizado");
+      return;
+    }
   }
 
-  // 2️⃣ SALVA PERFIL
-  const dados = {
-    auth_id: authData.user.id,
+  const usuario = {
     tipo,
     nome,
     telefone,
-    ativo: true
+    cpf: tipo === "motorista" ? cpf : null,
+    criadoEm: new Date().toISOString()
   };
 
-  if(tipo === "motorista"){
-    dados.placa = document.getElementById("placa").value.trim();
-    dados.modelo_carro = document.getElementById("modelo").value.trim();
-  }
+  localStorage.setItem("usuarioRF", JSON.stringify(usuario));
 
-  const { error } = await supabaseClient
-    .from("usuarios")
-    .insert([dados]);
+  await supabaseClient.from("usuarios").insert(usuario);
 
-  if(error){
-    alert("Erro ao salvar perfil.");
-    return;
-  }
-
-  alert(`Cadastro realizado!\nTelefone: ${telefone}\nSenha: ${senha}`);
-  window.location.href = "login.html";
+  window.location.href = "dashboard.html";
 }
 </script>
 
