--- a/index.html
+++ b/index.html
@@ -182,6 +182,11 @@ document.getElementById("btnIniciar").onclick = async () => {
     return;
   }
 
+  if(usuario.tipo !== "motorista"){
+  window.location.href = "index-passageiro.html";
+  return;
+}
+
   const valido = await validarUsuarioAtivo();
 
   if(valido){
