--- a/destino.html
+++ b/destino.html
@@ -14,17 +14,98 @@ body{
   background:radial-gradient(circle at top,#fff,#f2f2f2);
   color:#444;
 }
-.page{min-height:100vh;display:flex;justify-content:center;padding:22px}
-.box{width:100%;max-width:420px;display:flex;flex-direction:column;gap:20px;animation:fadeUp .6s ease}
-.header{text-align:center;padding:26px;border-radius:24px;background:linear-gradient(180deg,#fff,#f3f3f3);border:1px solid rgba(212,175,55,.35);box-shadow:0 10px 26px rgba(0,0,0,.08)}
-.header h1{font-size:1.4rem;letter-spacing:2px;background:linear-gradient(180deg,#D4AF37,#E6C97A);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
-.header p{font-size:.85rem;color:#666}
-.card-box{background:#fff;border-radius:20px;padding:18px;box-shadow:0 8px 22px rgba(0,0,0,.08)}
-.select-btn{padding:18px;border-radius:16px;border:1px solid #ddd;background:#fff;color:#000}
-.primary{background:linear-gradient(180deg,#E6C97A,#D4AF37);border:none;padding:18px;font-weight:700;border-radius:18px;box-shadow:0 8px 18px rgba(212,175,55,.35)}
-.secondary{border:1px solid #ccc;padding:14px;border-radius:16px;background:#fff}
-.modal{position:fixed;inset:0;background:rgba(0,0,0,.6);display:none;align-items:center;justify-content:center}
-.modal-content{background:#fff;width:90%;max-width:420px;border-radius:22px;padding:18px}
+
+@keyframes fadeUp{
+  from{opacity:0;transform:translateY(16px)}
+  to{opacity:1;transform:translateY(0)}
+}
+
+.page{
+  min-height:100vh;
+  display:flex;
+  justify-content:center;
+  padding:22px;
+}
+
+.box{
+  width:100%;
+  max-width:420px;
+  display:flex;
+  flex-direction:column;
+  gap:20px;
+  animation:fadeUp .6s ease;
+}
+
+.header{
+  text-align:center;
+  padding:26px;
+  border-radius:24px;
+  background:linear-gradient(180deg,#fff,#f3f3f3);
+  border:1px solid rgba(212,175,55,.35);
+  box-shadow:0 10px 26px rgba(0,0,0,.08);
+}
+
+.header h1{
+  font-size:1.4rem;
+  letter-spacing:2px;
+  background:linear-gradient(180deg,#D4AF37,#E6C97A);
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+}
+
+.header p{
+  font-size:.85rem;
+  color:#666;
+}
+
+.card-box{
+  background:#fff;
+  border-radius:20px;
+  padding:18px;
+  box-shadow:0 8px 22px rgba(0,0,0,.08);
+}
+
+.select-btn{
+  padding:18px;
+  border-radius:16px;
+  border:1px solid #ddd;
+  background:#fff;
+  color:#000;
+}
+
+.primary{
+  background:linear-gradient(180deg,#E6C97A,#D4AF37);
+  border:none;
+  padding:18px;
+  font-weight:700;
+  border-radius:18px;
+  box-shadow:0 8px 18px rgba(212,175,55,.35);
+}
+
+.secondary{
+  border:1px solid #ccc;
+  padding:14px;
+  border-radius:16px;
+  background:#fff;
+}
+
+.modal{
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.6);
+  display:none;
+  align-items:center;
+  justify-content:center;
+  z-index:50;
+}
+
+.modal-content{
+  background:#fff;
+  width:90%;
+  max-width:420px;
+  border-radius:22px;
+  padding:18px;
+}
 </style>
 </head>
 
@@ -48,8 +129,8 @@ body{
     Continuar
   </button>
 
-  <button class="secondary" onclick="App.go('origem.html')">⬅ Voltar</button>
-  <button class="secondary" onclick="App.go('index.html')">🏠 Início</button>
+  <button class="secondary" id="btnVoltar">⬅ Voltar</button>
+  <button class="secondary" id="btnInicio">🏠 Início</button>
 
 </div>
 </div>
@@ -61,62 +142,102 @@ body{
   </div>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="core/auth.js"></script>
 <script src="core/global.js"></script>
 <script src="core/datamanager.js"></script>
 
 <script>
-const origem=App.get("origem");
-if(!origem) App.go("index.html");
+(async () => {
+  const usuario = JSON.parse(localStorage.getItem("usuarioRF"));
 
-const destinoBtn=document.getElementById("destinoBtn");
-const modal=document.getElementById("modal");
-const lista=document.getElementById("lista");
-const busca=document.getElementById("busca");
-const btn=document.getElementById("btnContinuar");
+  // Não cadastrado
+  if(!usuario){
+    window.location.href = "cadastro.html";
+    return;
+  }
 
-let destinos=[];
+  // Bloqueio automático
+  const valido = await validarUsuarioAtivo();
+  if(!valido) return;
 
-destinoBtn.onclick=()=>{
-  modal.style.display="flex";
-  busca.value="";
+  // Origem obrigatória
+  const origem = App.get("origem");
+  if(!origem){
+    if(usuario.tipo === "motorista"){
+      window.location.href = "index.html";
+    }else{
+      window.location.href = "index-passageiro.html";
+    }
+    return;
+  }
+
+  // Botões dinâmicos
+  document.getElementById("btnVoltar").onclick = () => {
+    App.go("origem.html");
+  };
+
+  document.getElementById("btnInicio").onclick = () => {
+    if(usuario.tipo === "motorista"){
+      window.location.href = "index.html";
+    }else{
+      window.location.href = "index-passageiro.html";
+    }
+  };
+})();
+
+/* ================= LÓGICA DE DESTINO ================= */
+
+const destinoBtn = document.getElementById("destinoBtn");
+const modal = document.getElementById("modal");
+const lista = document.getElementById("lista");
+const busca = document.getElementById("busca");
+const btn = document.getElementById("btnContinuar");
+
+let destinos = [];
+const origem = App.get("origem");
+
+destinoBtn.onclick = () => {
+  modal.style.display = "flex";
+  busca.value = "";
   render(destinos);
-  setTimeout(()=>busca.focus(),100);
+  setTimeout(() => busca.focus(), 100);
 };
 
-modal.onclick=e=>{
-  if(e.target===modal) modal.style.display="none";
+modal.onclick = e => {
+  if(e.target === modal) modal.style.display = "none";
 };
 
 async function carregar(){
   await DataManager.carregar();
-  destinos=DataManager.listarDestinos(origem);
+  destinos = DataManager.listarDestinos(origem);
 }
 
 function render(arr){
-  lista.innerHTML="";
-  arr.forEach(d=>{
-    const valor=DataManager.buscarValor(origem,d);
-    const div=document.createElement("div");
-    div.textContent=d;
-    div.style.padding="14px";
-    div.style.color="#000";
-    div.onclick=()=>{
-      destinoBtn.textContent=d;
-      App.set("destino",d);
-      App.set("valorBase",valor);
-      modal.style.display="none";
-      btn.disabled=false;
+  lista.innerHTML = "";
+  arr.forEach(d => {
+    const valor = DataManager.buscarValor(origem, d);
+    const div = document.createElement("div");
+    div.textContent = d;
+    div.style.padding = "14px";
+    div.style.color = "#000";
+    div.onclick = () => {
+      destinoBtn.textContent = d;
+      App.set("destino", d);
+      App.set("valorBase", valor);
+      modal.style.display = "none";
+      btn.disabled = false;
     };
     lista.appendChild(div);
   });
 }
 
-busca.oninput=()=>{
-  const t=busca.value.toLowerCase();
-  render(destinos.filter(d=>d.toLowerCase().includes(t)));
+busca.oninput = () => {
+  const t = busca.value.toLowerCase();
+  render(destinos.filter(d => d.toLowerCase().includes(t)));
 };
 
-btn.onclick=()=>App.go("resumo.html");
+btn.onclick = () => App.go("resumo.html");
 
 carregar();
 </script>
