--- a/login-motorista.html
+++ b/login-motorista.html
@@ -125,7 +125,7 @@ button{
   </div>
 </div>
 
-<script src="core/motoristas.js"></script>
+<script src="./core/motoristas.js"></script>
 
 <script>
 const cpfInput = document.getElementById("cpf");
