--- a/cadastro.html
+++ b/cadastro.html
@@ -84,7 +84,7 @@ button {
 <script>
 const supabaseClient = supabase.createClient(
   "SUA_URL",
-  "SUA_CHAVE"
+  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1zbnFpaXdjaXR5aWtzbGlrYm93Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc3MDM5OTgsImV4cCI6MjA4MzI3OTk5OH0.0KyaSuL5At4_Cfa4TOM7kvvkVYv-gmR2sb7vX6VHkaU"
 );
 
 document.getElementById("btnCadastrar").addEventListener("click", cadastrar);
