--- a/login-passageiro.html
+++ b/login-passageiro.html
@@ -4,64 +4,188 @@
 <meta charset="UTF-8">
 <title>Login Passageiro – RF Driver</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <link rel="stylesheet" href="./theme/theme.css">
+<link rel="stylesheet" href="./theme/layout.css">
+<link rel="stylesheet" href="./theme/components.css">
+
 <style>
-/* Estilos simplificados para o exemplo */
-body {
-  font-family: Arial, sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background: #f4f4f4;
+body{
+  background:radial-gradient(circle at top,#ffffff,#f2f2f2);
+  font-family:Inter, Arial, sans-serif;
+  color:#222;
 }
 
-.card {
-  background: #fff;
-  padding: 30px;
-  border-radius: 12px;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-  text-align: center;
+.page{
+  min-height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  padding:22px;
 }
 
-input, button {
-  margin-top: 10px;
-  padding: 10px;
-  width: 100%;
-  border: 1px solid #ccc;
-  border-radius: 8px;
+.card{
+  width:100%;
+  max-width:380px;
+  background:#fff;
+  border-radius:26px;
+  padding:28px 22px;
+  box-shadow:0 12px 30px rgba(0,0,0,.12);
+  display:flex;
+  flex-direction:column;
+  gap:18px;
+  animation:fadeUp .6s ease;
 }
 
-button {
-  background-color: #d4af37;
-  color: #fff;
-  font-weight: bold;
-  cursor: pointer;
+@keyframes fadeUp{
+  from{opacity:0;transform:translateY(20px)}
+  to{opacity:1;transform:translateY(0)}
 }
 
-button:hover {
-  background-color: #c89f2c;
+.logo{
+  text-align:center;
+}
+
+.logo h1{
+  font-size:1.6rem;
+  font-weight:900;
+  letter-spacing:2px;
+  color:#000;
+}
+
+.logo span{
+  font-size:.8rem;
+  color:#666;
+}
+
+input{
+  width:100%;
+  padding:14px;
+  border-radius:16px;
+  border:1px solid #ccc;
+  font-size:1rem;
+}
+
+button{
+  padding:16px;
+  border-radius:18px;
+  border:none;
+  background:linear-gradient(180deg,#E6C97A,#D4AF37);
+  font-size:1rem;
+  font-weight:800;
+  color:#000;
+}
+
+.info{
+  font-size:.75rem;
+  color:#666;
+  text-align:center;
+}
+
+.error{
+  color:#c62828;
+  font-size:.8rem;
+  text-align:center;
+  display:none;
 }
 </style>
 </head>
+
 <body>
 
-<div class="card">
-  <h2>Login Passageiro</h2>
-  <input type="text" id="cpf" placeholder="Digite seu CPF" />
-  <button onclick="fazerLoginPassageiro()">Entrar</button>
+<div class="page">
+  <div class="card">
+
+    <div class="logo">
+      <h1>PASSAGEIRO</h1>
+      <span>Acesso para usuário já cadastrado</span>
+    </div>
+
+    <input
+      type="text"
+      id="cpf"
+      placeholder="Digite seu CPF"
+      maxlength="14"
+    >
+
+    <button id="btnEntrar">
+      Entrar
+    </button>
+
+    <div class="error" id="erro">
+      Passageiro não encontrado ou acesso bloqueado
+    </div>
+
+    <div class="info">
+      Use este acesso apenas se você já se cadastrou anteriormente.
+    </div>
+
+  </div>
 </div>
 
+<!-- SUPABASE -->
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
-function fazerLoginPassageiro() {
-  const cpf = document.getElementById('cpf').value;
-  // Aqui você pode adicionar a lógica de validação do CPF do passageiro
-  // Simulação simples: se o CPF não estiver vazio, redireciona
-  if (cpf) {
-    window.location.href = 'index-passageiro.html';
-  } else {
-    alert('Por favor, digite seu CPF.');
+const supabaseClient = supabase.createClient(
+  "SUA_URL",
+  "SUA_CHAVE"
+);
+</script>
+
+<script>
+const cpfInput = document.getElementById("cpf");
+const btn = document.getElementById("btnEntrar");
+const erro = document.getElementById("erro");
+
+/* Máscara simples de CPF */
+cpfInput.addEventListener("input", () => {
+  let v = cpfInput.value.replace(/\D/g,"").slice(0,11);
+  v = v.replace(/(\d{3})(\d)/,"$1.$2");
+  v = v.replace(/(\d{3})(\d)/,"$1.$2");
+  v = v.replace(/(\d{3})(\d{1,2})$/,"$1-$2");
+  cpfInput.value = v;
+});
+
+btn.addEventListener("click", loginPassageiro);
+
+cpfInput.addEventListener("keypress", e => {
+  if(e.key === "Enter") loginPassageiro();
+});
+
+async function loginPassageiro(){
+  erro.style.display = "none";
+
+  const cpf = cpfInput.value.replace(/\D/g,"");
+
+  if(cpf.length !== 11){
+    erro.innerText = "CPF inválido";
+    erro.style.display = "block";
+    return;
   }
+
+  const { data, error } = await supabaseClient
+    .from("usuarios")
+    .select("*")
+    .eq("cpf", cpf)
+    .eq("tipo", "passageiro")
+    .eq("ativo", true)
+    .single();
+
+  if(error || !data){
+    erro.style.display = "block";
+    return;
+  }
+
+  const usuario = {
+    tipo: "passageiro",
+    nome: data.nome,
+    telefone: data.telefone,
+    cpf: data.cpf
+  };
+
+  localStorage.setItem("usuarioRF", JSON.stringify(usuario));
+
+  window.location.href = "index-passageiro.html";
 }
 </script>
 
