--- a/admin-login.html
+++ b/admin-login.html
@@ -2,97 +2,101 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Login Admin – RF Driver</title>
+<title>Admin – Login</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="stylesheet" href="./theme/theme.css">
 
 <style>
 body{
-  background:#111;
-  color:#fff;
+  background:radial-gradient(circle at top,#ffffff,#f2f2f2);
   font-family:Inter, Arial, sans-serif;
+}
+
+.page{
+  min-height:100vh;
   display:flex;
   justify-content:center;
   align-items:center;
-  height:100vh;
+  padding:20px;
 }
 
 .card{
-  background:#1c1c1c;
-  padding:24px;
-  border-radius:16px;
+  background:#fff;
   width:100%;
   max-width:360px;
-  box-shadow:0 10px 30px rgba(0,0,0,.6);
+  padding:26px;
+  border-radius:22px;
+  box-shadow:0 10px 28px rgba(0,0,0,.12);
+  display:flex;
+  flex-direction:column;
+  gap:16px;
 }
 
 h1{
   text-align:center;
-  margin-bottom:20px;
+  font-size:1.4rem;
+  color:#000;
 }
 
 input{
-  width:100%;
-  padding:12px;
-  border-radius:10px;
-  border:none;
-  margin-bottom:12px;
+  padding:14px;
+  border-radius:14px;
+  border:1px solid #ccc;
 }
 
 button{
-  width:100%;
-  padding:12px;
+  padding:14px;
   border:none;
-  border-radius:12px;
-  font-weight:700;
+  border-radius:16px;
   background:#d4af37;
-  color:#000;
+  font-weight:800;
+}
+
+.error{
+  color:#c62828;
+  font-size:.8rem;
+  text-align:center;
+  display:none;
 }
 </style>
 </head>
 
 <body>
 
-<div class="card">
-  <h1>Admin</h1>
+<div class="page">
+  <div class="card">
+    <h1>Admin</h1>
 
-  <input type="email" id="email" placeholder="Email">
-  <input type="password" id="senha" placeholder="Senha">
+    <input id="usuario" placeholder="Usuário">
+    <input id="senha" type="password" placeholder="Senha">
 
-  <button onclick="login()">Entrar</button>
+    <button onclick="loginAdmin()">Entrar</button>
+
+    <div class="error" id="erro">
+      Acesso não autorizado
+    </div>
+  </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="core/admins.js"></script>
+
 <script>
-const supabaseClient = supabase.createClient(
-  "SUA_URL",
-  "SUA_CHAVE"
-);
-
-async function login(){
-  const email = document.getElementById("email").value.trim();
+function loginAdmin(){
+  const usuario = document.getElementById("usuario").value.trim();
   const senha = document.getElementById("senha").value.trim();
+  const erro = document.getElementById("erro");
 
-  if(!email || !senha){
-    alert("Preencha todos os campos");
+  erro.style.display = "none";
+
+  const admin = buscarAdmin(usuario, senha);
+
+  if(!admin){
+    erro.style.display = "block";
     return;
   }
 
-  const { data, error } = await supabaseClient
-    .from("admins")
-    .select("*")
-    .eq("email", email)
-    .eq("senha", senha)
-    .eq("ativo", true)
-    .single();
-
-  if(error || !data){
-    alert("Acesso negado");
-    return;
-  }
-
-  localStorage.setItem("adminLogado", JSON.stringify(data));
+  localStorage.setItem("adminRF", JSON.stringify(admin));
   window.location.href = "admin.html";
 }
 </script>
